--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,14 +25,14 @@ jobs:
           - uses: actions/checkout@v3
             with:
               fetch-depth: 0
-              token: ${{ secrets.PAT }}
+              token: ${{ secrets.GITHUB_TOKEN }}
 
           - name: Calculate version
             id: calculate_version
             uses: mathieudutour/github-tag-action@v6.0
             with:
               tag_prefix: ""
-              github_token: ${{ secrets.PAT }}
+              github_token: ${{ secrets.GITHUB_TOKEN }}
               dry_run: true
               default_bump: false
               custom_release_rules: |
@@ -118,7 +118,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.0
         with:
           tag_prefix: "v"
-          github_token: ${{ secrets.PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           dry_run: true
           default_bump: false
 
@@ -151,7 +151,7 @@ jobs:
           uses: mathieudutour/github-tag-action@v6.0
           with:
               tag_prefix: "v"
-              github_token: ${{ secrets.PAT }}
+              github_token: ${{ secrets.GITHUB_TOKEN }}
               dry_run: true
               default_bump: false
 
