--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Run Godot Tests with GUT (https://github.com/bitwes/Gut)
-      - uses: croconut/godot-tester@v2.5
+      - name: Run Godot 3.5 Tests
+        uses: croconut/godot-tester@v2.5
         with:
           # required - you could also use 3.4.4 to run GUT tests with this Godot version
           version: "3.5"
@@ -66,7 +67,7 @@ jobs:
           # not checked by default, set to a number to limit the
           # maximum amount of failed tests for a passing test suite
           max-fails: 0
-          # to ensure all SCRIPT ERRORs dont contribute to your failure rate
+          # to ensure all SCRIPT ERRORS dont contribute to your failure rate
           ignore-errors: "true"
           # default is GUTs default: 'res://.gutconfig.json'; set this to load a different config file
           config-file: "res://.gutconfig.json"
