--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,10 @@ jobs:
     if: "github.event.head_commit.message != 'Release preparation: storing Version and Changelog'"
     name: Preparing release
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.calculate_version.outputs.new_version }}
+      tag: ${{ steps.calculate_version.outputs.new_tag }}
+      changelog: ${{ steps.calculate_version.outputs.changelog }}
     steps:
       - uses: actions/checkout@v3
         with:
