--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,14 +33,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
 
       - name: Calculate version
         id: calculate_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
           tag_prefix: ""
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
           dry_run: true
           default_bump: false
           custom_release_rules: |
@@ -124,7 +124,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           tag_prefix: "v"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
           dry_run: true
           default_bump: false
 
@@ -157,7 +157,7 @@ jobs:
           uses: mathieudutour/github-tag-action@v6.1
           with:
             tag_prefix: "v"
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+            github_token: ${{ secrets.PAT }}
             dry_run: true
             default_bump: false
 
